# hexlet-python-django

./: .gitignore  Makefile  README.md  README.rst  db.sqlite3  manage.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
hello_django/: settings.py  urls.py  views.py
hello_django/calc/: apps.py  models.py  urls.py  views.py
hello_django/calc/migrations/: 0001_initial.py
hello_django/templates/calc/: history.html  index.html
tests/: test_views.py
