[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = "A simple Django app"
authors = ["Hexlet Team <info@hexlet.io>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
